cmake_minimum_required(VERSION 3.17)
project(test_dpcpp)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Modules)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_VERBOSE_MAKEFILE ON)
add_executable(test_no_member_fn main.cpp)
target_include_directories(test_no_member_fn PUBLIC "/home/john/intel/dpcpp/oneapi/GITHUB/include/")
target_include_directories(test_no_member_fn PUBLIC "/home/john/intel/dpcpp/oneapi/GITHUB/include/sycl")
#target_compile_options(test_no_member_fn PUBLIC "-fsycl;-fsycl-unnamed-lambda")
target_compile_options(test_no_member_fn PUBLIC "-fsycl")
target_compile_options(test_no_member_fn PUBLIC "-O3")
target_link_libraries(test_no_member_fn PUBLIC "sycl")
target_link_options(test_no_member_fn PUBLIC "-fsycl")


add_executable(test_member_fn main.cpp)
target_include_directories(test_member_fn PUBLIC "/home/john/intel/dpcpp/oneapi/GITHUB/include/")
target_include_directories(test_member_fn PUBLIC "/home/john/intel/dpcpp/oneapi/GITHUB/include/sycl")
#target_compile_options(test_member_fn PUBLIC "-fsycl;-fsycl-unnamed-lambda")
target_compile_definitions(test_member_fn PUBLIC "CALL_AS_MEMBER_FUNC")
target_compile_options(test_member_fn PUBLIC "-fsycl")
target_compile_options(test_member_fn PUBLIC "-O3")
target_link_libraries(test_member_fn PUBLIC "sycl")
target_link_options(test_member_fn PUBLIC "-fsycl")

add_subdirectory(test_memory_size)
add_subdirectory(test_max_compute_unit)
add_subdirectory(test_transpose)
add_subdirectory(test_subgroup)
#add_subdirectory(test_lz_module)